/user/deleteUser 删除用户
