# router/system/sys_user.go
@@ -22,5 +22,6 @@ func (s *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 		userRouter.POST("changePassword", baseApi.ChangePassword) // 用户修改密码
 		userRouter.PUT("setUserInfo", baseApi.SetUserInfo)        //设置用户信息
 		userRouter.PUT("setSelfInfo", baseApi.SetSelfInfo)        // 设置自身信息
+		userRouter.DELETE("deleteUser", baseApi.DeleteUser)       // 删除用户
 	}
 }
